graphics(desktop): DesktopGraphics.supportsExtension reflects live GL ES3 context (ISS-537)
supportsExtension delegated to glfwExtensionSupported, but the GLFW window is
created GLFW_NO_API (ANGLE owns the GL context) so GLFW has no current context
and returned false for every name — even extensions the live ANGLE ES3 context
exposes. Now enumerate the live set via glGetStringi(GL_EXTENSIONS,i) over
glGetIntegerv(GL_NUM_EXTENSIONS), cache lazily in Nullable[Set[String]], and
.contains (mirrors AndroidGraphics:242-249, ES3-indexed with an ES2 fallback).
Single shared scaladesktop change covers both JVM and Native desktop backends.

red:684a7cc6 (DesktopIntegrationTest.supportsExtension reflects the live GL
context (ISS-537) — desktop-IT subprocess, JVM/ANGLE, 102 extensions enumerated)
fix:d8519260 audit:PASS (proof-of-red + mutation + JVM/Native compile).